tests/machine/x/swift/dataset_where_filter.error
/tmp/TestSwiftCompiler_VMValid_Goldendataset_where_filter2759939850/001/main.swift:17:18: error: value of type '[String : Any]' has no member 'name'
15 | print("--- Adults ---")
16 | for person in adults {
17 |     print(person.name, "is", person.age, person.is_senior ? " (senior)" : "")
   |                  `- error: value of type '[String : Any]' has no member 'name'
18 | }
19 | 

/tmp/TestSwiftCompiler_VMValid_Goldendataset_where_filter2759939850/001/main.swift:17:37: error: value of type '[String : Any]' has no member 'age'
15 | print("--- Adults ---")
16 | for person in adults {
17 |     print(person.name, "is", person.age, person.is_senior ? " (senior)" : "")
   |                                     `- error: value of type '[String : Any]' has no member 'age'
18 | }
19 | 

/tmp/TestSwiftCompiler_VMValid_Goldendataset_where_filter2759939850/001/main.swift:17:49: error: value of type '[String : Any]' has no member 'is_senior'
15 | print("--- Adults ---")
16 | for person in adults {
17 |     print(person.name, "is", person.age, person.is_senior ? " (senior)" : "")
   |                                                 `- error: value of type '[String : Any]' has no member 'is_senior'
18 | }
19 | 
