tests/machine/x/swift/dataset_where_filter.swift
// Generated by Mochi compiler v0.10.27 on 2006-01-02T15:04:05Z
struct Adult: Equatable {
    var age: Int
    var is_senior: Bool
    var name: String
}

struct People: Equatable {
    var age: Int
    var name: String
}

var people = [People(age: 30, name: "Alice"), People(age: 15, name: "Bob"), People(age: 65, name: "Charlie"), People(age: 45, name: "Diana")]
var adults = people.compactMap { person in person.age >= 18 ? ((name: person.name, age: person.age, is_senior: person.age >= 60)) : nil }
print("--- Adults ---")
for person in adults {
    print(person.name, "is", person.age, person.is_senior ? " (senior)" : "")
}
